gitops/cicd/sonarqube/sonarqube-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: sonarqube
  name: sonarqube
  namespace: cicd
spec:
  host: sonarqube-cicd.apps.openshift.openshift.npe-rdg.net
  subdomain: ""
  to:
    kind: Service
    name: sonarqube
    weight: 100
  wildcardPolicy: None
status:
  ingress:
  - conditions:
    host: sonarqube-cicd.apps.openshift.openshift.npe-rdg.net
    routerCanonicalHostname: apps.openshift.openshift.npe-rdg.net
    routerName: default
    wildcardPolicy: None
